<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="org.eclipse.paho.android.sample.activity.HelpFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/help_paho"
        android:padding="10dp"
        android:src="@drawable/paho_logo_full"/>

    <TextView
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal"
        android:text="@string/help_title"
        android:textSize="30sp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/websiteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/help_paho_website"/>

    <Button
        android:id="@+id/feedbackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/websiteButton"
        android:layout_centerHorizontal="true"
        android:text="@string/help_email_button"/>

    <Switch
        android:id="@+id/enable_logging_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feedbackButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:checked="false"
        android:text="@string/help_enable_logging"/>


</RelativeLayout>