<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/subscription_dialog"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/topic_label"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <EditText
        android:id="@+id/subscription_topic_edit_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"/>

    <TextView
        android:id="@+id/qos_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qos_label"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <Spinner
        android:id="@+id/subscription_qos_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <Switch
        android:id="@+id/show_notifications_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notify_label"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorSecondary"/>


</LinearLayout>