<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="org.eclipse.paho.android.sample.activity.MessagesFragment">


    <TextView
        android:id="@+id/title_label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:text="@string/manage_title"
        android:textSize="45sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/connection_id_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/manage_delete"/>

    <TextView
        android:id="@+id/connection_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_label"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/delete_button"
        android:layout_alignLeft="@+id/delete_button"
        android:layout_alignRight="@+id/delete_button"
        android:layout_alignStart="@+id/delete_button"
        android:layout_below="@+id/delete_button"
        android:layout_marginTop="26dp"
        android:text="@string/manage_edit"/>


</RelativeLayout>