<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="?android:attr/listPreferredItemHeight"
    android:padding="6dip" >

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dip"
        android:src="@drawable/ic_topic"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/qos_label"
        android:layout_width="100dip"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/icon"
        android:ellipsize="marquee"
        android:text="@string/qos_text"
        android:textSize="12sp"
        android:maxLines="1" />

    <TextView
        android:id="@+id/show_notifications_label"
        android:layout_width="fill_parent"
        android:layout_height="26dip"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/qos_label"
        android:text="@string/notify_text"
         />

    <TextView
        android:id="@+id/message_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_alignWithParentIfMissing="true"
        android:layout_toRightOf="@id/icon"
        android:gravity="center_vertical"
        android:text="@string/topic_label"
        android:textSize="16sp" />


    <ImageView
        android:id="@+id/topic_delete_image"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_marginRight="6dip"
        android:src="@drawable/ic_delete"
        android:layout_alignEnd="@+id/message_text"
        android:layout_alignRight="@+id/message_text"
        android:layout_alignParentRight="true"
        tools:ignore="ContentDescription" />

</RelativeLayout>