<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="56dp"
                android:orientation="vertical"
                tools:context="org.eclipse.paho.android.sample.activity.MessagesFragment">


    <LinearLayout
        android:id="@+id/topic_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/message_text"
            style="@style/spinnerTextFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_connection_lwt_topic_label"/>

        <EditText
            android:id="@+id/topic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="1"/>
    </LinearLayout>


    <View
        android:id="@+id/divider8"
        style="@style/Divider"
        android:layout_below="@+id/topic_group"/>


    <LinearLayout
        android:id="@+id/lwt_message_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lwt_message_label"
            style="@style/spinnerTextFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_connection_lwt_message_label"/>

        <EditText
            android:id="@+id/message"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="4"/>
    </LinearLayout>


    <View
        android:id="@+id/divider9"
        style="@style/Divider"
        android:layout_below="@+id/lwt_message_group"/>


    <LinearLayout
        android:id="@+id/lwt_qos_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider9"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lwt_qos_label"
            style="@style/spinnerTextFieldLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_connection_lwt_qos_label"/>

        <Spinner
            android:id="@+id/qos_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <View
        android:id="@+id/divider10"
        style="@style/Divider"
        android:layout_below="@+id/lwt_qos_group"/>

    <Switch
        android:id="@+id/retain_switch"
        style="@style/Switch"
        android:layout_below="@+id/divider10"
        android:checked="false"
        android:text="@string/add_connection_lwt_retain_label"/>

    <Button
        android:id="@+id/publish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/retain_switch"
        android:layout_centerHorizontal="true"
        android:text="@string/publish"/>


</RelativeLayout>